@@ -5,8 +5,8 @@ Requires: pupmod-simp-iptables < 6.0.0-0
 Requires: pupmod-simp-iptables >= 5.0.0-0
 Requires: pupmod-simp-logrotate < 6.0.0-0
 Requires: pupmod-simp-logrotate >= 5.0.0-0
-Requires: pupmod-simp-rsync >= 5.0.0-0
-Requires: pupmod-simp-rsync < 6.0.0-0
+Requires: pupmod-simp-rsync >= 6.0.0-0
+Requires: pupmod-simp-rsync < 7.0.0-0
 Requires: pupmod-simp-rsyslog < 7.0.0-0
 Requires: pupmod-simp-rsyslog >= 6.0.0-0
 Requires: pupmod-simp-simplib >= 2.0.0-0
