@@ -1,6 +1,6 @@
 {
   "name": "simp-dhcp",
-  "version": "5.0.1",
+  "version": "6.0.0",
   "author": "SIMP Team",
   "summary": "A Puppet module to automate configuration of DHCP",
   "license": "Apache-2.0",
@@ -34,7 +34,7 @@
     },
     {
       "name": "simp/rsync",
-      "version_requirement": ">= 5.0.0 < 6.0.0"
+      "version_requirement": ">= 6.0.0 < 7.0.0"
     }
   ],
   "operatingsystem_support": [
